Win-Create sharing access to user function

--- a/Process_2_GEE_Python_Classification/BackGround_modules/Function_1_Sharing_EE_Asset.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Function_1_Sharing_EE_Asset.ipynb
@@ -30,8 +30,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List all items of a root_path"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,24 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = p.split('\\n')"
+    "items = p.split('\\n')[2:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Running command using Cloud API.  Set --no-use_cloud_api to go back to using the API',\n",
-       " '',\n",
-       " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Boundary_shp',\n",
+       "['projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Boundary_shp',\n",
        " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Cloud_Free_Img',\n",
        " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Each_Landsat_Time_Series',\n",
        " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Fourier_pixels',\n",
@@ -70,17 +75,16 @@
        " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Supply_img',\n",
        " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/classification_img',\n",
        " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/classified_samples',\n",
-       " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/compare_acc_sample',\n",
-       " '']"
+       " 'projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/compare_acc_sample']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "p"
+    "items"
    ]
   },
   {
@@ -91,11 +95,32 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "List all objects from the root_path"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "all_data = [subprocess.run(f'earthengine ls {path}',\n",
+    "                           shell = True,\n",
+    "                           capture_output = True, \n",
+    "                           text = True ).stdout.split('\\n')[2:-1] for path in items]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_data"
+   ]
   },
   {
    "cell_type": "code",
