Ubuntu-Create year_range_harmonic_3 fourier img

--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Determine_Best_(year_range,Fourier_num,Tree_num).ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Determine_Best_(year_range,Fourier_num,Tree_num).ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,11 +274,24 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step_2_Determine the best Year_range"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# first define the year range\n",
+    "start = ['2015-01-01'] * 5\n",
+    "end   = [f'{date}-12-31' for date in range(2015,2020)]\n",
+    "\n",
+    "year_range = list(zip(start,end))"
+   ]
   },
   {
    "cell_type": "code",
@@ -303,10 +316,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Analyzing the images of 2015_2015\n",
+      "Fourier_img_2015_2015_harmonic_3\n",
+      "Analyzing the images of 2015_2016\n",
+      "Fourier_img_2015_2016_harmonic_3\n",
+      "Analyzing the images of 2015_2017\n",
+      "Fourier_img_2015_2017_harmonic_3\n",
+      "Analyzing the images of 2015_2018\n",
+      "Fourier_img_2015_2018_harmonic_3\n",
+      "Analyzing the images of 2015_2019\n",
+      "Fourier_img_2015_2019_harmonic_3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Export different year_range fourier img to GEE_asset\n",
+    "\n",
+    "for span in year_range:\n",
+    "    \n",
+    "    # define the time span as name for later exporting \n",
+    "    start = span[0].split('-')[0]\n",
+    "    end   = span[1].split('-')[0]\n",
+    "\n",
+    "    span_name =  f'{start}_{end}'\n",
+    "    \n",
+    "    # define the asset path for exporting\n",
+    "    asset_bucket = 'users/Jinzhu_Deakin/North_China_Plain/Fourier_img_diff_year_range'\n",
+    "    # define the name for exporting\n",
+    "    extract_name = f'Fourier_img_{span_name}_harmonic_3'\n",
+    "    \n",
+    "    # make the Fourier img, the default is to make time series\n",
+    "    # of ['NDVI', 'NDBI', 'EVI']\n",
+    "    Fourier_making = Make_Fourier( start_date = span[0],\n",
+    "                                   end_date   = span[1],\n",
+    "                                   harmonics  = 3 )\n",
+    "\n",
+    "    # Go through the Fourier img making process\n",
+    "    Fourier_making.Stp_1_Create_hamonic_names()\n",
+    "    Fourier_making.Stp_2_Add_harmonics()\n",
+    "    Fourier_making.Stp_3_Harmonic_fit()\n",
+    "\n",
+    "    # Get the Fourier img\n",
+    "    Fourier_img = Fourier_making.harmonicTrendCoefficients\n",
+    "    \n",
+    "    # Export the fourier_img to GEE_asset\n",
+    "    task = ee.batch.Export.image.toAsset(   image       = Fourier_img,\n",
+    "                                            description = f'Exporting {extract_name} ',\n",
+    "                                            assetId     = f'{asset_bucket}/{extract_name}',\n",
+    "                                            \n",
+    "                                            \n",
+    "                                            region      = North_china_plain_boundary.geometry(),\n",
+    "                                            scale       = 30,\n",
+    "                                            \n",
+    "                                            maxPixels   = int(1e13))\n",
+    "    task.start()\n",
+    "    \n",
+    "    # print out the process\n",
+    "    print(extract_name)"
+   ]
   },
   {
    "cell_type": "code",
