--- a/Process_2_GEE_Python_Classification/BackGround_modules/Function_1_Sharing_EE_Asset.ipynb
+++ b/Process_2_GEE_Python_Classification/BackGround_modules/Function_1_Sharing_EE_Asset.ipynb
@@ -468,7 +468,28 @@
       "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_One_Mean_Index_NDVI_tree_110 to public\n",
       "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_One_Mean_Index_NDVI_tree_120 to public\n",
       "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_001 to public\n",
-      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_010 to public\n"
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_010 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_020 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_030 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_040 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_050 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_060 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_070 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_080 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_090 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_100 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_110 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Three_Mean_Index_tree_120 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Two_Mean_Index_EVI_NDBI_tree_001 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Two_Mean_Index_EVI_NDBI_tree_010 to public\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Two_Mean_Index_EVI_NDBI_tree_020 to public\n",
+      "Granting access projects/earthengine-legacy/assets/users/wangjinzhulala/North_China_Plain_Python/Spectrum_Fourier_samples/Year_2017_2019_Test_LandSat_Three_Fourier_EVI_NDBI_NDVI_Sentinel_Two_Mean_Index_EVI_NDBI_tree_030 to public\n"
      ]
     }
    ],
