ignore ipyb_checkpoint, make fourier img of 2018-2019 2019-2019

--- a/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Determine_Best_(year_range,Fourier_num,Tree_num).ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_1_Determine_best_(Year_range,Fourier_num,Tree_num)/Step_1_Determine_Best_(year_range,Fourier_num,Tree_num).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,26 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Analyzing the images of 2017_2019\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2017_2019_harmonic_1\n",
-      "Analyzing the images of 2017_2019\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2017_2019_harmonic_2\n",
-      "Analyzing the images of 2017_2019\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2017_2019_harmonic_3\n",
-      "Analyzing the images of 2017_2019\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2017_2019_harmonic_4\n",
-      "Analyzing the images of 2017_2019\n",
-      "Exporting users/wang8052664/North_China_Plain/Fourier_imgs/Fourier_img_2017_2019_harmonic_5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Extract the Fourier_pixel_value to sample points\n",
     "# 1) using year_range to make Fourier_img\n",
@@ -280,13 +263,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# first define the year range\n",
-    "start = ['2015-01-01'] * 5\n",
-    "end   = [f'{date}-12-31' for date in range(2015,2020)]\n",
+    "start = [f'{i}-01-01' for i in range(2015,2020)]\n",
+    "end   = ['2019-12-31' ] * 5\n",
     "\n",
     "year_range = list(zip(start,end))"
    ]
@@ -307,30 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analyzing the images of 2015_2015\n",
-      "Fourier_img_2015_2015_harmonic_3\n",
-      "Analyzing the images of 2015_2016\n",
-      "Fourier_img_2015_2016_harmonic_3\n",
-      "Analyzing the images of 2015_2017\n",
-      "Fourier_img_2015_2017_harmonic_3\n",
-      "Analyzing the images of 2015_2018\n",
-      "Fourier_img_2015_2018_harmonic_3\n",
       "Analyzing the images of 2015_2019\n",
-      "Fourier_img_2015_2019_harmonic_3\n"
+      "Fourier_Range_5_Year_2015_2019\n",
+      "Analyzing the images of 2016_2019\n",
+      "Fourier_Range_4_Year_2016_2019\n",
+      "Analyzing the images of 2017_2019\n",
+      "Fourier_Range_3_Year_2017_2019\n",
+      "Analyzing the images of 2018_2019\n",
+      "Fourier_Range_2_Year_2018_2019\n",
+      "Analyzing the images of 2019_2019\n",
+      "Fourier_Range_1_Year_2019_2019\n"
      ]
     }
    ],
@@ -342,13 +318,14 @@
     "    # define the time span as name for later exporting \n",
     "    start = span[0].split('-')[0]\n",
     "    end   = span[1].split('-')[0]\n",
+    "    span_len  = int(end) - int(start) + 1 \n",
     "\n",
     "    span_name =  f'{start}_{end}'\n",
     "    \n",
     "    # define the asset path for exporting\n",
     "    asset_bucket = 'users/Jinzhu_Deakin/North_China_Plain/Fourier_img_diff_year_range'\n",
     "    # define the name for exporting\n",
-    "    extract_name = f'Fourier_img_{span_name}_harmonic_3'\n",
+    "    extract_name = f'Fourier_Range_{span_len}_Year_{span_name}'\n",
     "    \n",
     "    # make the Fourier img, the default is to make time series\n",
     "    # of ['NDVI', 'NDBI', 'EVI']\n",
@@ -439,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
